# anomaly-detect

./: .gitattributes  .gitignore  AUDIT.md  README.md  __version__.py  environment-linux.yml  environment-mac.yml  environment-windows.yml  environment.yml  pyproject.toml  requirements.txt
cli/: main.py
config/: config.yml
core/: __init__.py  capture.py  dataset_utils.py  preprocessor.py
models/: __init__.py  autoencoder.py  base_model.py  benchmark.py  detector.py  random_forest.py  svm.py  trainer.py
siem/: __init__.py  wazuh_forwarder.py
tests/: conftest.py  test_capture.py  test_dataset_utils.py  test_detector.py  test_preprocessor.py  test_trainer.py
tests/test_cli/: test_main.py
tests/test_models/: test_autoencoder.py  test_benchmark.py  test_svm.py
tests/test_platform/: __init__.py  test_linux.py  test_macos.py  test_windows.py  test_wsl2.py
tests/test_siem/: __init__.py  test_wazuh_forwarder.py
tests/test_utils/: __init__.py  test_config_loader.py  test_file_saver.py  test_gpu_utils.py  test_metrics.py  test_progress.py
utils/: __init__.py  config_loader.py  file_saver.py  gpu_utils.py  logger.py  metrics_utils.py  packet_utils.py  progress.py
