# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"
fallback_version = "1.3.0"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "models*", "siem*", "utils*"]

[tool.setuptools]
py-modules = ["__version__"]

[project]
name = "anomaly-detect"
dynamic = ["version"]
description = "Anomaly-Based Threat Detection Pipeline using Machine Learning"
authors = [
  { name = "William Jecks", email = "billy@jecks.co.uk" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==2.4.4",
  "pandas==3.0.2",
  "scikit-learn==1.8.0",
  "tensorflow==2.21.0",
  "joblib==1.5.3",
  "pyyaml==6.0.3",
  "scapy==2.7.0",
  "matplotlib==3.10.9",
  "seaborn==0.13.2",
  "tqdm==4.67.3",
]
license = "MIT"

# cuml (RAPIDS) is NOT available on PyPI and cannot be installed via pip.
# Install it via conda on Linux + CUDA machines:
#   conda install -c rapidsai -c conda-forge -c nvidia cuml
# Then set use_gpu: true in config/config.yml.
[project.optional-dependencies]
gpu = []  # placeholder — see comment above

[project.urls]
Homepage = "https://github.com/care-git/anomaly-detect"

[project.scripts]
anomaly-detect = "cli.main:main"

[tool.pytest.ini_options]
filterwarnings = [
  # LinearSVC on toy test fixtures can't converge — not actionable on real data.
  "ignore::sklearn.exceptions.ConvergenceWarning",
]
