# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "_version.py"
fallback_version = "1.3.0"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "models*", "siem*", "utils*"]

[tool.setuptools]
py-modules = ["__version__"]

[project]
name = "anomaly-detect"
dynamic = ["version"]
description = "Anomaly-Based Threat Detection Pipeline using Machine Learning"
authors = [
  { name = "William Jecks", email = "billy@jecks.co.uk" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # numpy and tensorflow are intentionally excluded - the platform-specific
  # environment files handle installation with the correct versions for each
  # platform. Pinning them here causes pip install -e . to override the
  # platform build (e.g. numpy 2.x breaks tensorflow-macos 2.16.2 on macOS).
  "pandas==2.2.3",
  "scikit-learn==1.8.0",
  "joblib==1.5.3",
  "pyyaml==6.0.3",
  "scapy==2.7.0",
  "matplotlib==3.10.9",
  "seaborn==0.13.2",
  "tqdm==4.67.3",
]
license = "MIT"

# cuml (RAPIDS) is NOT available on PyPI and cannot be installed via pip.
# Install it via conda on Linux + CUDA machines:
#   conda install -c rapidsai -c conda-forge -c nvidia cuml
# Then set use_gpu: true in config/config.yml.
[project.optional-dependencies]
gpu = []  # placeholder - see comment above

[project.urls]
Homepage = "https://github.com/care-git/anomaly-detect"

[project.scripts]
anomaly-detect = "cli.main:main"

[tool.pytest.ini_options]
filterwarnings = [
  # LinearSVC on toy test fixtures can't converge - not actionable on real data.
  "ignore::sklearn.exceptions.ConvergenceWarning",
]
markers = [
  "macos: tests that verify macOS-specific behaviour (skip on other platforms)",
  "linux: tests that verify Linux-specific behaviour (skip on other platforms)",
  "windows: tests that verify Windows-specific behaviour (skip on other platforms)",
  "wsl2: tests that verify WSL2-specific behaviour (skip outside WSL2)",
  "gpu: tests that require a physical GPU to be present",
  "slow: tests with non-trivial wall-clock runtime",
]
